# expert-system

./: .gitignore  Cargo.toml  README.md  author  coverage.sh
.github/workflows/: check.yml  test.yml
benches/: benchmark.rs
src/: errors.rs  input.rs  lib.rs  main.rs  parser.rs  permutation_iter.rs  sanitize.rs  sanitize_lines.rs  usage.rs
src/input/: mod.rs  sanitize_lines.rs
src/logic/: mod.rs  permutation_iter.rs  rule_map.rs  rule_parser.rs  truth_table.rs
src/logic/permutation_iter/: mod.rs  parallel.rs  sequential.rs
src/structs/: parser.rs
src/utils/: mod.rs  read_file.rs
tests/: integration_test.rs  integration_tests.rs  lib_test.rs  main_test.rs  main_tests.rs
tests/input/input/: double_facts.txt  double_queries.txt  duplicate_facts.txt  duplicate_queries.txt  empty_facts.txt  empty_queries.txt  missing_facts.txt  no_rules.txt  order.txt  rule_order.txt  spacing.txt  valid.txt  white_space.txt
tests/input/integration_test/: invalid_queries.txt  spacing.txt  to_few_sections.txt  to_many_sections.txt  white_space.txt
tests/input/read_file/: text.txt
tests/input/sanitize_lines/: example_input.txt  example_input_expected.txt
tests/utils/: mod.rs
tests/valid_input/: example_input.txt
varianttraits-derive/: Cargo.toml
varianttraits-derive/src/: lib.rs
