[package]
name = "expert-system"
version = "0.1.0"
authors = ["nanderstabel <nanderstabel@gmail.com>", "pepijnholster <pgaholster@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "expert_system"

[dependencies]
indoc = "1.0.3"

[dev-dependencies]
assert_cmd = "1.0.7"
predicates = "2.0.1"
pretty_assertions = "0.7.2"
dot = "0.1.4"
