[package]
name = "expert-system"
version = "0.1.0"
authors = ["nanderstabel <nanderstabel@gmail.com>", "pepijnholster <pgaholster@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "expert_system"

[dependencies]
indoc = "1.x"

[dev-dependencies]
assert_cmd = "2.x"
predicates = "2.x"
pretty_assertions = "1.x"
dot = "0.1.x"
