[package]
name = "expert_system"
version = "0.1.0"
authors = ["nanderstabel <nanderstabel@gmail.com>", "pepijnholster <pgaholster@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "expert_system"
path = "src/main.rs"

[dependencies]
indoc = "1.x"
anyhow = "1.x"

[dev-dependencies]
assert_cmd = "2.x"
pretty_assertions = "1.x"
